Bugzilla bug #66286: link libnss3.so with -R '$ORIGIN' on Solaris so that it searches for libfreebl_*.so in the same directory where it resides. As a result, libnss3.so, not libnspr4.so, must be the one calling dlopen, so libnss3.so can't call PR_LoadLibraryWithFlags. Modified files: lib/freebl/loader.c, lib/nss/config.mk